Fixed .header-with-button page scroll overflow

--- a/Client/src/css/app.styl
+++ b/Client/src/css/app.styl
@@ -86,8 +86,8 @@ a {
   display: flex;
   flex-wrap: wrap;
   align-items: center;
-  margin-top: $flex-gutter-md !important;
-  margin-bottom: $flex-gutter-md !important;
+  padding-top: $flex-gutter-md !important;
+  padding-bottom: $flex-gutter-md !important;
 
   .q-title {
     flex-grow: 1;
